# Project-Penguin

./: AddDevice.cpp  CMakeLists.txt  Centroid.cpp  Centroid.h  ConfigFile.cpp  ConfigFile.h  DatabaseCommunicator.cpp  DatabaseCommunicator.h  DatabaseInfo.cpp  DatabaseInfo.h  PiGenerateImages.cpp  README.md  TrackPeople.cpp  Tracker.cpp  Tracker.h  configFile.txt  connect.php  csv.php  device.php  hub.html  hub.php  index.html  login.php
