cmake_minimum_required (VERSION 2.8)
project (sthings)
set(raspicam_DIR "/usr/local/lib/cmake")
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF(OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_execuable (PiGenerateImages PiGenerateImages.cpp)
target_link_libraries (PiGenerateImages ${raspicam_CV_LIBS})
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND!")
ENDIF()
